# Simple-parser

./: .gitignore  README.md  pyproject.toml
documents/: data.json  n.json
parser2/: data1.json  sync_parser.py  test.py  to_json.py  to_xlsx.py
