[tool.poetry]
name = "parser2"
version = "0.1.0"
description = "Simple parser"
authors = ["Max A. Max900000@yandex.ru"]

[tool.poetry.dependencies]
python = "^3.9.6"
requests = "^2.26.0"
lxml = "^4.6.3"
beautifulsoup4 = "^4.10.0"
aiohttp = "^3.7.4"
aiofiles = "^0.7.0"
uvloop = "^0.16.0"
ujson = "^4.1.0"
tablib = {extras = ["xlsx"], version = "^3.0.0"}
fake-useragent = "^0.1.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.8b0"
mypy = "^0.910"
pylint = "^2.10.2"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
